TinyMUX 2.3:  CHANGES
Last Update:  May 2003

Major changes that may affect performance and require softcode tweaks:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 -- Dbconvert is now depreciated in favor of the same features in a
    stand-alone mode of netmux.  On Unix, there is a symbolic link for
    dbconvert to netmux.  But, on both Win32 and Unix, all the features
    of stand-alone mode are accessible via new command line options as
    follows:

        netmux -d<basename> -i<infile> -o<outfile> [-l|-u|-k]


Feature Additions:
~~~~~~~~~~~~~~~~~
 -- Quotas are checked/repaired during @dbck.
 -- Added support -p option, netmux.pid, and you can run more than one
    MUX server per Unix account without modifying the Startmux script.
    This feature first appeared in TinyMUSH 3.0.
 -- Limit the number of oustanding slave processes at any one time to
    20.  Introduced by Brazil.  Jointly refined with Alierak.
 -- Expand @list alloc report to 14 digits for total allocations column.


Bug Fixes:
~~~~~~~~~
 -- Alierak fix for buffer overflow exploit in slave process.
 -- Alierak fix for logic bug in logging.
 -- Alierak fixes build breakage on Darwin due to inconsistent use of
    size_t.
 -- Fix SIGSEGV in SCRAMBLE().
 -- Alierak fixes strcat() given that its assumptions about TinyExec are
    no longer true.
 -- Alierak fix for home(bad_obj) logic.
 -- Alierak fixes off-by-one error in wrap().
 -- Only allow printable characters in identd.  The slave process on
    Unix does this.  The threaded implementation for Win32 didn't.
 -- Alierak reported that SCRAMBLE still scrambles characters off the
    end of the buffer.  He provided a patch that fixed that while not
    giving a flat distribution.  This final check-in fixed both issues.
 -- Bug fix in mux_memicmp().  mux_memicmp("June ", "june", 4) != 0
    when it should.  Brazil's bug.  mux_memicmp() was added to fix a